--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT"
 tokio = { version = "1.36.0", features = ["full"] }
 reqwest = { version = "0.11.24", features = ["json"] }
 serde = { version = "1.0.197", features = ["derive"] }
-serde_json = "1.0.114"
+serde_json = { version = "1.0.114", features = ["preserve_order"] }
 dotenv = "0.15.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 chrono = "0.4.34"
@@ -20,6 +20,27 @@ env_logger = "0.11.2"
 thiserror = "1.0.57"
 futures = "0.3.30"
 anyhow = "1.0.79"
+lazy_static = "1.5.0"
+
+[[bin]]
+name = "pumpfun-sniper-rust"
+path = "src/main.rs"
+
+[[bin]]
+name = "rpc-test"
+path = "src/bin/rpc_test.rs"
+
+[[bin]]
+name = "compare-rpc"
+path = "src/bin/compare_rpc.rs"
+
+[[bin]]
+name = "compare-all"
+path = "src/bin/compare_all.rs"
+
+[[bin]]
+name = "test-pumpfun"
+path = "src/bin/test_pumpfun.rs"
 
 [profile.release]
 opt-level = 3
