--- a/src/approved-devs.json
+++ b/src/approved-devs.json
@@ -126,5 +126,33 @@
   {
     "address": "9dtGg97QAfxc2UF4LGaxLzYdB4MJpnNMK7Y2iUwGidoy",
     "name": "Approved Developer 32"
+  },
+  {
+    "address": "J1egHZt2QLTvySjQKctFwiuaAvYm3YaRtQao14AsPmWG",
+    "name": "Approved Developer 33"
+  },
+  {
+    "address": "J3MtfULicJ68YMkPhZ5sCMEo7RStKgYk9TtHXkYuiUUr",
+    "name": "Approved Developer 34"
+  },
+  {
+    "address": "7byPJ1nArieYopH1sR32BirQvEiA7hBNN5CPPPyzHDWC",
+    "name": "Approved Developer 35"
+  },
+  {
+    "address": "Haee7H5bKDCnm6dXLkeR9DcWw9Puhnkwk71QBUSHcpUt",
+    "name": "Approved Developer 36"
+  },
+  {
+    "address": "5qvLmTd6yKMn7T7DP6RPPcASBH231Rtvjta1Pzao48PR",
+    "name": "Approved Developer 37"
+  },
+  {
+    "address": "BJUt3h1gnNUs6YGDJPpMSDB9pgdycMKhuhKW38NikxYF",
+    "name": "Approved Developer 38"
+  },
+  {
+    "address": "FXzJ6xwH2HfdKshERVAYiLh79PAUw9zC7ucngupt91ap",
+    "name": "Approved Developer 39"
   }
 ]
