--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,35 +1,27 @@
 [package]
-name = "pumpfun-sniper-rust"
-version = "1.2.0"
+name = "pumpfun-sniper"
+version = "0.1.0"
 edition = "2021"
-description = "Pumpfun sniper bot to snipe new tokens with urls checks and more."
-authors = ["@solanazdev <support@pumpfunsniper.net>"]
-license = "MIT"
-default-run = "pumpfun-sniper-rust"
 
 [dependencies]
-tokio = { version = "1.36.0", features = ["full"] }
-reqwest = { version = "0.11.24", features = ["json"] }
-serde = { version = "1.0.197", features = ["derive"] }
-serde_json = { version = "1.0.114", features = ["preserve_order"] }
-dotenv = "0.15.0"
-rusqlite = { version = "0.30.0", features = ["bundled"] }
-chrono = "0.4.34"
-url = "2.5.0"
-log = "0.4.20"
-env_logger = "0.11.2"
-thiserror = "1.0.57"
-futures = "0.3.30"
-anyhow = "1.0.79"
-lazy_static = "1.5.0"
-
-[[bin]]
-name = "pumpfun-sniper-rust"
-path = "src/main.rs"
-
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-panic = "abort"
-strip = true
+tokio = { version = "1.36", features = ["full"] }
+tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
+futures-util = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+url = "2.5"
+base64 = "0.21"
+bs58 = "0.5"
+solana-program = "1.17"
+lazy_static = "1.4"
+anyhow = "1.0"
+log = "0.4"
+env_logger = "0.10"
+chrono = "0.4"
+dotenv = "0.15"
+reqwest = { version = "0.11", features = ["json"] }
+rustc-hash = "1.1"
+solana-sdk = "1.17"
+solana-client = "1.17"
+regex = "1.10"
+rusqlite = { version = "0.33.0", features = ["bundled"] }
