--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ solana-sdk = "1.17"
 solana-client = "1.17"
 regex = "1.10"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
+thiserror = "2.0.11"
+rand = "0.9.0"
