--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde_json = "1.0"
 url = "2.5"
 base64 = "0.21"
 bs58 = "0.5"
-solana-program = "1.17"
+solana-program = "=1.16.25"
 lazy_static = "1.4"
 anyhow = "1.0"
 log = "0.4"
@@ -21,9 +21,12 @@ chrono = "0.4"
 dotenv = "0.15"
 reqwest = { version = "0.11", features = ["json"] }
 rustc-hash = "1.1"
-solana-sdk = "1.17"
-solana-client = "1.17"
+solana-sdk = "=1.16.25"
+solana-client = "=1.16.25"
 regex = "1.10"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 thiserror = "2.0.11"
-rand = "0.9.0"
+rand = "0.8.5"
+
+[dependencies.ark-ff]
+version = "=0.3.0"
