--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,76 @@
-# Wallet and Trading Configuration
+########################
+# Wallet Configuration #
+########################
 PRIVATE_KEY=your_private_key_here
 WALLET=your_wallet_address_here
-AMOUNT=0.1
-SLIPPAGE=10
-MAX_POSITIONS=1
 
-# Trading Settings
-TAKE_PROFIT=50
-STOP_LOSS=25
-TIMEOUT=60
-CHECK_MIN_LIQUIDITY=true
-MIN_LIQUIDITY=4
-APPROVED_DEVS_ONLY=false
-SNIPE_BY_TAG=
+########################
+# Trading Parameters   #
+########################
+AMOUNT=0.01              # Default amount of SOL to use when buying
+SLIPPAGE=30              # Slippage percentage
+TAKE_PROFIT=60           # Take profit percentage
+STOP_LOSS=10             # Stop loss percentage
+TIMEOUT=30               # Transaction timeout in seconds
+MAX_POSITIONS=1          # Maximum number of concurrent positions
+CHECK_URLS=false         # Whether to check URLs for token metadata
+SNIPE_BY_TAG=            # Filter tokens by tag
 
-# Speed and Performance Settings
-POLLING_RATE_MS=100
-CLEAN_START=true
-TOKEN_QUERY_RETRY=3
-TOKEN_QUERY_DELAY=2000
+########################
+# Quality Checks       #
+########################
+CHECK_MIN_LIQUIDITY=true # Whether to check minimum liquidity
+MIN_LIQUIDITY=30         # Minimum liquidity in SOL
+APPROVED_DEVS_ONLY=false # Whether to only buy tokens from approved developers
 
-# Bonding Curve Settings for pump.fun Tokens
-INITIAL_SUPPLY=1000000000
-BONDING_CURVE_CONSTANT_RESERVE=1073000191
-BONDING_CURVE_CONSTANT_K=32190005730
-BONDING_CURVE_OFFSET=30
-
-# Chainstack Configuration - REQUIRED
+##########################
+# Node Connection Config #
+##########################
+# Primary Chainstack Node
 CHAINSTACK_ENDPOINT=https://solana-mainnet.core.chainstack.com/your_token_here
 CHAINSTACK_WSS_ENDPOINT=wss://solana-mainnet.core.chainstack.com/your_token_here
-USE_CHAINSTACK_AUTH=false
-CHAINSTACK_USERNAME=your_username
-CHAINSTACK_PASSWORD=your_password
-USE_TRADER_NODE=true
-PRIORITY_FEE=1000000
-COMPUTE_UNITS=200000
-USE_MEV_PROTECTION=true
+RPC_URL=https://solana-mainnet.core.chainstack.com/your_token_here
+USE_CHAINSTACK_AUTH=true
+CHAINSTACK_USERNAME=your_username_here
+CHAINSTACK_PASSWORD=your_password_here
+COMMITMENT_LEVEL=processed
 
-# SolanaAPIs Configuration - REQUIRED
-SOLANA_APIS_ENDPOINT=https://api.solanaapis.net
-USE_SOLANA_APIS_FALLBACK=true 
+# Trader Node Configuration
+CHAINSTACK_TRADER_RPC_URL=https://nd-xxx-xxx-xxx.p2pify.com/your_token_here
+CHAINSTACK_TRADER_WSS_URL=wss://ws-nd-xxx-xxx-xxx.p2pify.com/your_token_here
+USE_TRADER_NODE_FOR_TRANSACTIONS=true
+
+##########################
+# WebSocket Settings     #
+##########################
+# Enable WebSocket for real-time token discovery and price monitoring
+USE_WEBSOCKET=true
+# Enable WebSocket for balance updates (legacy setting)
+USE_WEBSOCKET_FOR_BALANCE=true
+# Enable detailed WebSocket message logging for debugging
+DEBUG_WEBSOCKET_MESSAGES=false
+# Enable debug mode for the WebSocket connection 
+WEBSOCKET_DEBUG=false
+# Price monitoring interval in milliseconds (minimum 50ms)
+# Lower values provide more frequent price updates but increase API usage
+# With 250 req/sec rate limit, 50ms is safe (20 req/sec)
+PRICE_CHECK_INTERVAL_MS=50
+
+##########################
+# Transaction Settings   #
+##########################
+PRIORITY_FEE=2000000     # Priority fee in microlamports (2M microlamports = 0.002 SOL; 1 SOL = 10^9 lamports)
+COMPUTE_UNITS=200000     # Compute units limit for transactions
+SKIP_PREFLIGHT=true      # Skip preflight checks for faster transactions
+MAX_RETRIES=3            # Number of transaction retries if failed
+
+##########################
+# Program IDs            #
+##########################
+TOKEN_PROGRAM_ID=TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA
+PUMP_PROGRAM_ID=6EF8rrecthR5Dkzon8Nwu78hRvfCKubJ14M5uBEwF6P
+
+##########################
+# Monitoring Settings    #
+##########################
+TESTING_MODE=false           # Enable testing mode to generate synthetic tokens
