--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ default-run = "pumpfun-sniper"
 
 [dependencies]
 tokio = { version = "1.36", features = ["full"] }
-tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
 futures-util = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -28,6 +28,22 @@ regex = "1.10"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 thiserror = "2.0.11"
 rand = "0.8.5"
+uuid = { version = "1.3", features = ["v4"] }
+sha2 = "0.10"
+bincode = "1.3.3"
 
+# Fix for ark-bn254 compile error
 [dependencies.ark-ff]
+version = "=0.3.0"
+
+[dependencies.ark-ec]
+version = "=0.3.0"
+
+[dependencies.ark-bn254]
+version = "=0.3.0"
+
+[dependencies.ark-serialize]
+version = "=0.3.0"
+
+[dependencies.ark-std]
 version = "=0.3.0"
