--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,24 @@ version = "0.1.0"
 edition = "2021"
 default-run = "pumpfun-sniper"
 
+[features]
+bin = []
+
+[[bin]]
+name = "test_token_logs"
+path = "src/bin/test_token_logs.rs"
+
+[[bin]]
+name = "simple_extract_tokens"
+path = "src/bin/simple_extract_tokens.rs"
+
+[[bin]]
+name = "test_token_detection"
+path = "src/bin/test_token_detection.rs"
+
 [dependencies]
-tokio = { version = "1.36", features = ["full"] }
+tokio = { version = "1.36", features = ["full", "macros"] }
+tokio-macros = "2.3"
 tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
 futures-util = "0.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -13,6 +29,7 @@ serde_json = "1.0"
 url = "2.5"
 base64 = "0.21"
 bs58 = "0.5"
+hex = "0.4"
 solana-program = "=1.16.25"
 lazy_static = "1.4"
 anyhow = "1.0"
@@ -31,6 +48,9 @@ rand = "0.8.5"
 uuid = { version = "1.3", features = ["v4"] }
 sha2 = "0.10"
 bincode = "1.3.3"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+clap = { version = "4.5.31", features = ["derive"] }
 
 # Fix for ark-bn254 compile error
 [dependencies.ark-ff]
