--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ bincode = "1.3.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5.31", features = ["derive"] }
+http = "1.2.0"
 
 # Fix for ark-bn254 compile error
 [dependencies.ark-ff]
