--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures-util = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 url = "2.5"
-base64 = "=0.21.5"
+base64 = "0.21.2"
 bs58 = "0.5"
 hex = "0.4"
 solana-program = "=1.16.25"
@@ -54,6 +54,8 @@ dashmap = "6.1.0"
 native-tls = "0.2"
 solana-transaction-status = "1.16.25"
 solana-account-decoder = "1.16.25"
+spl-associated-token-account = "1.1.3"
+spl-token = "=3.5.0"
 
 # Fix for ark-bn254 compile error - using older, more stable versions
 [dependencies.ark-ff]
