--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ solana-transaction-status = "1.16.25"
 solana-account-decoder = "1.16.25"
 spl-associated-token-account = "1.1.3"
 spl-token = "=3.5.0"
+lru = "0.13.0"
+borsh = "0.10.3"
 
 # Fix for ark-bn254 compile error - using older, more stable versions
 [dependencies.ark-ff]
